feat: add palette page

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -9,3 +9,9 @@
 		@apply bg-ctp-base text-ctp-text;
 	}
 }
+
+@layer components {
+	.inline-link {
+		@apply underline underline-offset-2 text-ctp-rosewater decoration-ctp-rosewater/50 hover:decoration-ctp-rosewater/70 transition-all;
+	}
+}
