refactor: reduce container nesting

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -11,6 +11,10 @@
 }
 
 @layer components {
+	#app {
+		@apply pt-12 pb-36 px-6 max-w-[90ch] mx-auto;
+	}
+
 	.inline-link {
 		@apply underline underline-offset-2 text-ctp-rosewater decoration-ctp-rosewater/50 hover:decoration-ctp-rosewater/70 transition-all;
 	}
