--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,11 +1,14 @@
-/* Write your global styles here, in PostCSS syntax */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	font-feature-settings: 'case', 'ss01', 'ss02', 'cv12', 'cv13';
+}
+
 @layer base {
 	body {
+		@apply antialiased;
 		@apply bg-ctp-base text-ctp-text;
 	}
 }
